# matrix-mul-m4r

./: .gitignore  CMakeLists.txt  README.md
include/dsta/: common.h  engine.h  kernel.h  m4r.h  packing.h  sparsity.h
src/: engine.cpp  kernel.cpp  m4r.cpp  packing.cpp  sparsity.cpp
tests/: benchmark.cpp
